--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+nav a.active {
+  height: 50 vh;
+  min-height: 400px;
+  background-color: rgba(179, 221, 252, 0.196);
+}
