--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -12,10 +13,18 @@ code {
     monospace;
 }
 
+.nav-link {
+  padding: 5px;
+  font-size: x-large;
+  font-family: hyperakt;
+
+}
+
 #nav-bar {
   border-radius: 12px;
-  background-color: rgba(86, 175, 253, 0.668);
-  padding: 2px;
+  background-color: rgba(202, 205, 208, 0.668);
+  padding: 5px;
+  line-break: auto;
 }
 
 nav a.active {
@@ -24,7 +33,6 @@ nav a.active {
   color: black;
   border-radius: 12px;
   border: 2px solid rgba(86, 175, 253, 0.695);
-  /* background-color: rgba(179, 221, 252, 0.196); */
 }
 
 img {
