--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,24 @@
 
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: azure;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: x-large;
+}
+
+button,
+select {
+  border: none;
+  padding: 0.5rem;
+  border-radius: 4px;
+  font-size: 1rem;
+}
+
+#details {
+  border: none;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  padding: 0.5rem;
+  border-radius: 4px;
+  font-size: 1rem;
 }
 
 code {
@@ -22,8 +35,8 @@ code {
 
 #nav-bar {
   border-radius: 12px;
-  background-color: rgba(202, 205, 208, 0.668);
-  padding: 5px;
+  background-color: rgba(58, 51, 51, 0.084);
+  padding: 12px;
   line-break: auto;
 }
 
@@ -33,6 +46,10 @@ nav a.active {
   color: black;
   border-radius: 12px;
   border: 2px solid rgba(86, 175, 253, 0.695);
+}
+
+#search {
+  font-size: 20px;
 }
 
 img {
@@ -45,7 +62,7 @@ img {
   float: left;
   width: 20%;
   padding: 25px;
-  /* border: 2px solid rgba(119, 119, 119, 0.239); */
+  font-size: small;
 }
 
 button {
