--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,10 @@
+.App {
+  text-align: center;
+
+}
 
 body {
-  background-color: azure;
+  background-color: whitesmoke;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: x-large;
 }
@@ -50,6 +54,10 @@ nav a.active {
 
 #search {
   font-size: 20px;
+}
+
+.movie-form {
+  padding: 3px;
 }
 
 img {
